float_eq/tests/derive_tests/debug_ulps_diff/debug_ulps_diff_duplicate_type_name.stderr
error: Expected only one debug ULPs diff type name, previously saw `debug_ulps_diff = "Name1"`.
 --> $DIR/debug_ulps_diff_duplicate_type_name.rs:4:57
  |
4 | #[float_eq(debug_ulps_diff = "Name1", debug_ulps_diff = "Name2")]
  |                                                         ^^^^^^^
